--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@ body {
 }
 
 #page_header {
-  height: 10vh;
+  min-height: 10vh;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   place-items: center;
   width: 100%;
 }
@@ -30,9 +30,9 @@ body {
 
 .main_article {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   place-items: center;
-  width: 80%;
+  width: 90%;
 }
 
 .main_article > div {
@@ -42,13 +42,14 @@ body {
 
 .main_article > img {
   width: 200px;
-  height: 200px;
+  height: auto;
 }
 
 #page_footer {
-  width: 80%;
+  width: 95%;
   min-height: 10vh;
   display: grid;
   place-items: center;
-  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
