--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
 
 body {
@@ -22,7 +23,8 @@ body {
 }
 
 #page_main {
-  min-height: 80vh;
+  min-height: 75vh;
+  width: 90%;
   display: grid;
   align-items: start;
   justify-items: center;
@@ -32,7 +34,6 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   place-items: center;
-  width: 90%;
 }
 
 .main_article > div {
@@ -46,8 +47,8 @@ body {
 }
 
 #page_footer {
-  width: 95%;
-  min-height: 10vh;
+  width: 100%;
+  min-height: 15vh;
   display: grid;
   place-items: center;
   text-align: center;
